deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-web-service
  template:
    metadata:
      labels:
        app: my-web-service
    spec:
      containers:
      - name: my-web-service
        image: fifi555/my-web-service:latest
        ports:
        - containerPort: 5000
