service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
  selector:
    app: my-web-service
